--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
 .leading-zero {
   line-height: 0;
 }
-/* 
+
 body{
-  border: 1px solid white;
-  overflow: hidden;
-} */
+  /* border: 1px solid white;
+  overflow: hidden; */
+
+  background-color: hsl(235, 21%, 11%);
+}
